--- a/pkg-curl-static-udeb/debian/changelog
+++ b/pkg-curl-static-udeb/debian/changelog
@@ -1,3 +1,9 @@
+curl (7.17.1-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Chris Lamb <chris@chris-lamb.co.uk>  Sat, 10 Nov 2007 12:16:44 +0000
+
 curl (7.17.0-1) unstable; urgency=low
 
   * Initial release.
